# LingoLearn

./: .gitignore  CMakeLists.txt  LingoLearn.pro  README.md
Client/: Client.pro  socketclient.cpp
Control/: 1abstractcommand.cpp  Control.pro  abstractcommand.cpp  abstractcommand.h  abstractobject.cpp  abstractobject.h  command.cpp  factory.cpp  factory.h  socket.h  sslworker.cpp  sslworker.h
Interface/: abstractcommand.cpp  abstractcommand.h
Interface/Interface/: abstractcommand.h
Server/: CMakeLists.txt  Server.pro  main.cpp  socketserver.cpp  socketserver.h
opensslTest/: CMakeLists.txt  main.cpp  opensslTest.pro  sslworker.cpp  sslworker.h
